Have a project MVP minus documentation
Get lifts and clear lifts buttons both work
Am able to get a single lift based on lift id
All forms clear after a Success
The right forms are shown and hidden between sign ins and sign outs

Next goal would be to get only lifts belonging to the signed in user

--- a/assets/styles/index.scss
+++ b/assets/styles/index.scss
@@ -1,1 +1,21 @@
 @import '~bootstrap/scss/bootstrap';
+
+form {
+  margin: 15px;
+}
+
+.content {
+  margin: 10px auto;
+  text-align: center;
+}
+
+div > section {
+  border: 1px solid black;
+  margin: 10px;
+  padding: 20px;
+}
+
+.peen {
+  display: inline-block;
+  border-radius: 15%;
+}
