--- a/assets/scripts/templates/single-lift-listing.handlebars
+++ b/assets/scripts/templates/single-lift-listing.handlebars
@@ -1,5 +1,5 @@
 {{log lift}}
-<section data-id="{{lift.id}}" class="col-4 peen">
+<section data-id="{{lift.id}}" class="col-4 lift-item">
   <h6>Lift:</h6>
   <h3>
     {{limit lift.exercise 15}}
