--- a/assets/styles/index.scss
+++ b/assets/styles/index.scss
@@ -1,21 +1,116 @@
 @import '~bootstrap/scss/bootstrap';
 
-form {
-  margin: 15px;
+h1 {
+  text-align: center;
+  background-color: rgba(50, 120, 130, 0.4)
+}
+
+.sign-in-head, .sign-up-head {
+  margin-left: 20px;
+}
+
+#sign-in, #sign-up {
+  display: block;
+}
+
+.main-header {
+  border: 1px solid black;
+  margin-left: 50px;
+  margin-top: 30px;
+  padding: 15px;
+  padding-left: 40px;
+  display: inline-block;
+}
+
+.success {
+  color: green;
+  font-size: 30px;
+  margin-left: 40px
+}
+
+.failure {
+  color: red;
+  font-size: 30px;
+  margin-left: 40px
+}
+
+h6 {
+  font-size: 25px;
+}
+
+#getLiftsButton, #clearLiftsButton {
+  margin-right: 30px;
+}
+
+#getLift {
+  border: 1px solid black;
+  padding-left: 40px;
+  margin-right: 400px;
+  margin-left: 20px;
+  padding-right: 20px;
+  display: inline-block;
+}
+
+select {
+  margin-left: 10px;
+  margin-top: 10px;
+  margin-bottom: 10px;
+}
+
+.stats {
+  border: 1px solid black;
+  padding: 5px;
+  margin-top: 0px;
+}
+
+.weight-stats {
+  margin: 10px;
+}
+
+.reps-stats {
+  margin: 10px;
+}
+
+#averageDisplay {
+  border: 1px solid black;
+  margin-right: 10px;
+}
+
+form > input{
+  margin: 8px;
+  display: inline-block;
 }
 
 .content {
   margin: 10px auto;
   text-align: center;
+  margin-bottom: 150px;
 }
 
 div > section {
-  border: 1px solid black;
+  border: 2px solid black;
   margin: 10px;
   padding: 20px;
 }
 
-.peen {
+.lift-heading {
+  text-shadow: 2px 2px rgba(0, 0, 0, .25);
+}
+
+.lift-item {
   display: inline-block;
   border-radius: 10%;
+}
+
+.row {
+  display: table;
+  margin: 0 50px;
+}
+
+.main-col {
+  border: 1px solid black;
+  margin: 15px;;
+  float: none;
+  display: table-cell;
+  vertical-align: top;
 }
