Fixed error/success messaging
Made the correct messages and classes display after each success/failure
Fixed title in tab
Made content update when adding lifts

--- a/assets/scripts/templates/lift-listing.handlebars
+++ b/assets/scripts/templates/lift-listing.handlebars
@@ -7,7 +7,7 @@
       {{limit lift.exercise 15}}
     </h3>
     <p>Lift ID: {{lift.id}}</p>
-    <p><b>Weight:</b> {{lift.weight}}</p>
+    <p><b>Weight:</b> {{lift.weight}} lbs.</p>
     <p><b>Reps:</b> {{lift.reps}}</p>
     <p>
       {{#if lift.user}}
