--- a/assets/scripts/templates/single-lift-listing.handlebars
+++ b/assets/scripts/templates/single-lift-listing.handlebars
@@ -6,7 +6,7 @@
   </h3>
   <h6>User:</h6>
   <p>Lift ID: {{lift.id}}</p>
-  <p>Weight used: {{lift.weight}}</p>
+  <p>Weight used: {{lift.weight}} lbs.</p>
   <p>Total reps: {{lift.reps}}</p>
   <p>
     {{#if lift.user}}
