--- a/assets/scripts/templates/remove-lift.handlebars
+++ b/assets/scripts/templates/remove-lift.handlebars
@@ -1,1 +1,1 @@
-<button class="btn btn-danger remove-lift" data-id="{{id}}">Delete</button>
+<button class="btn btn-danger remove-lift" data-id="{{id}}" data-toggle="modal" data-target="#myModal">Delete</button>
