--- a/assets/scripts/templates/single-lift-listing.handlebars
+++ b/assets/scripts/templates/single-lift-listing.handlebars
@@ -1,16 +1,15 @@
 {{log lift}}
 <section data-id="{{lift.id}}" class="col-4 lift-item">
   <h6>Lift:</h6>
-  <h3>
+  <h3 class="lift-heading">
     {{limit lift.exercise 15}}
   </h3>
-  <h6>User:</h6>
   <p>Lift ID: {{lift.id}}</p>
-  <p>Weight used: {{lift.weight}} lbs.</p>
-  <p>Total reps: {{lift.reps}}</p>
+  <p><b>Weight used:</b> {{lift.weight}} lbs.</p>
+  <p><b>Total reps:</b> {{lift.reps}}</p>
   <p>
     {{#if lift.user}}
-      {{lift.user.id}} {{lift.user.first_name}} {{lift.user.last_name}} {{lift.user.email}}
+      <b>User:</b> {{lift.user.first_name}} {{lift.user.last_name}}
     {{else}}
       No user provided.
     {{/if}}
