--- a/assets/scripts/templates/lift-listing.handlebars
+++ b/assets/scripts/templates/lift-listing.handlebars
@@ -1,7 +1,7 @@
 
 {{#each lifts as |lift|}}
   {{log lift}}
-  <section data-id="{{lift.id}}" class="col-3 lift-item">
+  <section data-id="{{lift.id}}" class="col-12 col-sm-5 col-lg-3 lift-item">
     <h6>Lift:</h6>
     <h3 class="lift-heading">
       {{limit lift.exercise 15}}
