--- a/assets/scripts/templates/remove-lift.handlebars
+++ b/assets/scripts/templates/remove-lift.handlebars
@@ -1,1 +1,2 @@
 <button class="btn btn-danger remove-lift" data-id="{{id}}" data-toggle="modal" data-target="#myModal">Delete</button>
+<button class="btn btn-primary updateBtn-listItem" data-id="{{id}}" data-toggle="modal" data-target="#update-modal">Update</button>
